# fin-en-fin-data-translation

./: README.md  pyproject.toml  requirements.txt  setup.py
translate/: __init__.py  code.py
