[project]
name = "translate"
version = "1.0.0"
description = "This repo helps you to translate dataframe headers or column values from fin-to-en and en-to-fin."
authors = [{name = "Aarni"}]
readme = "README.md"
requires-python = ">=3.7"

[project.urls] 
"Source" = "https://github.com/aarnisi/fin-en-fin-data-translation/"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependencies]
pandas = "~=1.4.4"
transformers = "~=4.28.1"
pyspark = "~=3.3.2"
