[project]
name = "translate"
version = "1.0.0"
description = "This repo helps you to translate dataframe headers or column values from fin-to-en and en-to-fin."
authors = [{name = "Aarni"}]
readme = "README.md"
requires-python = ">=3.7"

[project.urls] 
"Source" = "https://github.com/aarnisi/fin-en-fin-data-translation/"

[dependencies]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
